--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-31  Maciej Stachowiak  <mjs@apple.com>
+
+        Not reviewed, build fix.
+        
+        - fix builds
+
+        * kjs/property_map.cpp: Include HashTable.h the right way.
+
 2007-10-31  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
