2007-10-30  Mark Rowe  <mrowe@apple.com>
        Fix the Gtk and Qt builds by stubbing out PlatformKeyboardEvent::currentCapsLockState.

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::PlatformKeyboardEvent::currentCapsLockState):
        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::PlatformKeyboardEvent::currentCapsLockState):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27306 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-30  Mark Rowe  <mrowe@apple.com>
+
+        Fix the Gtk and Qt builds by stubbing out PlatformKeyboardEvent::currentCapsLockState.
+
+        * platform/gtk/KeyEventGtk.cpp:
+        (WebCore::PlatformKeyboardEvent::currentCapsLockState):
+        * platform/qt/PlatformKeyboardEventQt.cpp:
+        (WebCore::PlatformKeyboardEvent::currentCapsLockState):
+
 2007-10-31  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Anders.
