Oliver hasn't changed his name to ChangeLog.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27307 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -32,7 +32,7 @@
 
 2007-10-31  Maciej Stachowiak  <mjs@apple.com>
 
-        Reviewed by ChangeLog.
+        Reviewed by Oliver.
         
         - get rid of integer divide in PropertyMap and HashTable for 1% SunSpider speedup
         
