Reviewed by NOBODY (qt buildfix)
* kjs/nodes.h: include OwnPtr.h


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27309 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-31  Oliver Hunt  <oliver@apple.com>
 
+        Reviewed by NOBODY (qt buildfix)
+        * kjs/nodes.h: include OwnPtr.h
+
+2007-10-31  Oliver Hunt  <oliver@apple.com>
+
         Reviewed by Maciej.
 
         Remove SourceCodeElement class and replaced with a Vector for a 0.8% gain on sunspider
