--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-31  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
+        a dragLeave event is not the same as cancelling a drag.
+
+        * Api/qwebpage.cpp:
+
 2007-10-26  Mark Rowe  <mrowe@apple.com>
 
         Build fix.  Add missing #include of Platform.h.
