QDrag objects need to be created on the heap.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27311 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Simon.
 
+        QDrag objects need to be created on the heap.
+
+        * WebCoreSupport/DragClientQt.cpp:
+        (WebCore::DragClientQt::startDrag):
+
+2007-10-31  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         a dragLeave event is not the same as cancelling a drag.
 
         * Api/qwebpage.cpp:
