--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Simon.
 
+        fix most of the issues I found with Clipboard and DnD.
+
+        * Api/qwebpage.cpp:
+        (QWebPage::dragLeaveEvent):
+
+2007-10-31  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         QDrag objects need to be created on the heap.
 
         * WebCoreSupport/DragClientQt.cpp:
