--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-31  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/regexp.h:
+
 2007-10-31  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
