Reviewed by Mark Rowe.
The new Color must be marked valid.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27325 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-31  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        The new Color must be marked valid.
+
+        * platform/graphics/gtk/ColorGtk.cpp:
+
 2007-10-31  Simon Hausmann  <hausmann@kde.org>
 
         Reviewed by Maciej;
