Switch the Debug configuration to using the non-debug CRT
WebKitTools:

        Switch the Debug configuration to using the non-debug CRT

        This matches WebKit.

        Reviewed by Steve.

        * DumpRenderTree/win/DumpRenderTree.vcproj:

WebKit/win:

        Switch the Debug configuration to using the non-debug CRT

        The debug CRT conflicts with what Safari uses, which causes loading
        problems.

        Reviewed by Steve.

        * WebKit.vcproj/WebKit.vcproj:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27326 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-31  Adam Roben  <aroben@apple.com>
+
+        Switch the Debug configuration to using the non-debug CRT
+
+        The debug CRT conflicts with what Safari uses, which causes loading
+        problems.
+
+        Reviewed by Steve.
+
+        * WebKit.vcproj/WebKit.vcproj:
+
 2007-10-30  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Adam and Geoff.
