--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-31  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Dave Harrison.
+
+        * editing/execCommand/5569741.html: Added.
+        * platform/mac/editing/execCommand/5569741-expected.checksum: Added.
+        * platform/mac/editing/execCommand/5569741-expected.png: Added.
+        * platform/mac/editing/execCommand/5569741-expected.txt: Added.
+
 2007-10-31  Antti Koivisto  <antti@apple.com>
 
         Remove timing dependent, occasionally failing cue point tests.
