Fix a crash on launch due to a static initializer race
        We now use fast inline assembler spinlocks which can be statically
        initialized at compile time.

        As a side benefit, this speeds up SunSpider by 0.4%.

        Reviewed by Oliver.

        * wtf/FastMalloc.cpp:
        * wtf/TCSpinLock.h:
        (TCMalloc_SpinLock::Lock):
        (TCMalloc_SpinLock::Unlock):
        (TCMalloc_SlowLock):
        * wtf/TCSystemAlloc.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27336 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,21 @@
+2007-10-31  Adam Roben  <aroben@apple.com>
+
+        Fix a crash on launch due to a static initializer race
+
+        We now use fast inline assembler spinlocks which can be statically
+        initialized at compile time.
+
+        As a side benefit, this speeds up SunSpider by 0.4%.
+
+        Reviewed by Oliver.
+
+        * wtf/FastMalloc.cpp:
+        * wtf/TCSpinLock.h:
+        (TCMalloc_SpinLock::Lock):
+        (TCMalloc_SpinLock::Unlock):
+        (TCMalloc_SlowLock):
+        * wtf/TCSystemAlloc.cpp:
+
 2007-10-31  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Sam.
