Fix ChangeLog entry.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27340 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -4,7 +4,8 @@
         
         - shave some cycles off of local storage access for a 1% SunSpider speedup
         
-        Keep the LocalStorage pointer in the ExecState, not 
+        Keep the LocalStorage pointer in the ExecState, instead of getting
+        it from the ActivationImp all the time.
 
         * kjs/ExecState.cpp:
         (KJS::ExecState::updateLocalStorage):
