--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-31  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        * kjs/ExecState.h:
+
 2007-10-31  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
