Add some more tests that r27343 fixed
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27347 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -22,7 +22,9 @@
 
         Use jsNumberCell instead of jsNumber when converting double constants to JSValues
 
-        This fixes fast/js/math.html, which was suffering from a bug in MSVC.
+        This fixes fast/js/math.html, ecma/Date/15.9.5.10-1.js, and
+        ecma/Date/15.9.5.12-1.js, which were suffering from a bug in MSVC.
+
         It also gets rid of an MSVC warning that we previously had to silence.
 
         Reviewed by Geoff.
