2007-11-01  Kevin Ollivier  <kevino@theolliviers.com>
        Reviewed by Adam Roben.

        Print out an error message when the Windows build fails
        and provide guidance on how to find out what went wrong.

        * Scripts/build-webkit:
        * Scripts/webkitdirs.pm:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27348 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-01  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Reviewed by Adam Roben.
+
+        Print out an error message when the Windows build fails
+        and provide guidance on how to find out what went wrong.
+
+        * Scripts/build-webkit:
+        * Scripts/webkitdirs.pm:
+
 2007-11-01  Alexey Proskuryakov  <ap@webkit.org>
 
         Rubber-stamped by Adam Roben.
