Fix the parameter type of WebLocalizedString to match the UI_STRING macro
        Reviewed by Sam.

        * WebLocalizableStrings.cpp:
        (WebLocalizedString):
        (WebLocalizedLPCTSTR):
        * WebLocalizableStrings.h:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27356 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-01  Adam Roben  <aroben@apple.com>
+
+        Fix the parameter type of WebLocalizedString to match the UI_STRING macro
+
+        Reviewed by Sam.
+
+        * WebLocalizableStrings.cpp:
+        (WebLocalizedString):
+        (WebLocalizedLPCTSTR):
+        * WebLocalizableStrings.h:
+
 2007-11-01  Alexey Proskuryakov  <ap@webkit.org>
 
         Rubber-stamped by Adam Roben.
