- Fixed a build failure
        * WebEditorClient.cpp:
        (WebEditorClient::textWillBeDeletedInTextField):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27368 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-01  Kevin McCullough  <kmccullough@apple.com>
+
+        - Fixed a build failure
+
+        * WebEditorClient.cpp:
+        (WebEditorClient::textWillBeDeletedInTextField):
+
 2007-11-01  Adam Roben  <aroben@apple.com>
 
         Fix the parameter type of WebLocalizedString to match the UI_STRING macro
